# ur10_pick_place

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  pick_place.scene
launch/: ur10_gazebo.launch.py  ur10_moveit_gazebo.launch.py
scripts/: auto_pick_place.py  gripper_control.py
urdf/: cup.urdf  ur10_cell.xacro
